--- a/FitHub/FitHub/Setting/AboutViewController.storyboard
+++ b/FitHub/FitHub/Setting/AboutViewController.storyboard
@@ -25,12 +25,12 @@
                                     <constraint firstAttribute="width" constant="100" id="PgN-1r-Jn2"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-Gm-VS8">
-                                <rect key="frame" x="162" y="30" width="50" height="10"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-Gm-VS8" customClass="DownArrowView" customModule="FitHub" customModuleProvider="target">
+                                <rect key="frame" x="87" y="30" width="200" height="50"/>
+                                <color key="backgroundColor" red="0.15686274510000001" green="0.65490196079999996" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="10" id="9s4-mT-rvr"/>
-                                    <constraint firstAttribute="width" constant="50" id="JDM-AM-DA4"/>
+                                    <constraint firstAttribute="height" constant="50" id="9s4-mT-rvr"/>
+                                    <constraint firstAttribute="width" constant="200" id="JDM-AM-DA4"/>
                                 </constraints>
                             </view>
                         </subviews>
